# geometricsolver

./: .clang-format  .classpath  .gitignore  .project  README  README.md  _backlog.md  build.gradle  settings.gradle
__matlab/sketch/: sily.asv  sily.m
data/: __3x3_circle.gcm  __3x5_parallel.gcm  __3x6_iperpendicular.gcm  __5x3_tangCircles.gcm  ___5_mocircle.gcm  __circle_perpen.gcm  __m_5x5.gcm  __square_nets_1768_6x10.gcm  __square_nets_5940_10x20.gcm  __square_nets_730_5x5.gcm  __square_nets__16x32.gcm  __test__33.gcm  _three_constraints_.gcm  _vertical_line.cpp  model.187.gcm  sketch.125.gcm  traingle_inner_circle.gcm  traingle_two_inn_circle.gcm
data/constraints/: Angle2Lines.gcm  CircleTangency.gcm  Connect2Points.gcm  Distance2Points.gcm  DistancePointLine.gcm  EqualLength.gcm  FixPoint.gcm  HorizontalPoint.gcm  LinesParallelism.gcm  LinesPerpendicular.gcm  ParametrizedLength.gcm  ParametrizedXFix.gcm  ParametrizedYFix.gcm  SetHorizontal.gcm  SetVertical.gcm  Tangency.gcm  VerticalPoint.gcm
src/main/java/com/mstruzek/: AppBootstrap.java  AppEntry.java  Main.java
src/main/java/com/mstruzek/controller/: ActiveKey.java  ConstraintsTableModel.java  Controller.java  ControllerInterface.java  CppModelWriter.java  EventBus.java  EventType.java  Events.java  GCModelReader.java  GCModelWriter.java  Log.java  ObjectDeserializer.java  ObjectSerializer.java  ParametersTableModel.java  PrimitivesTableModel.java  Reporter.java
src/main/java/com/mstruzek/graphic/: ActionBuilder.java  ApplicationState.java  ContextActionSelector.java  DrawArc.java  DrawCircle.java  DrawElement.java  DrawFreePoint.java  DrawLine.java  DrawPoint.java  FrameView.java  GeometricModelTables.java  GeometricSOAIndex.java  GeometricSketch.java  LineTest.java  Marker.java  MyArc.java  MyCircle.java  MyDrawElement.java  MyFreePoint.java  MyLine.java  MyPoint.java  MyPointContainer.java  MyPopup.java  MySketch.java  MySketchState.java  MyTableModel.java  MyTables.java  PointContainer.java  PointSelectorPopup.java  Property.java  SolverStatPanel.java  TView.java  TableModelRemovable.java  View.java__  _ConstraintTableModel.java  _ParametersTableModel.java  _PrimitivesTableModel.java
src/main/java/com/mstruzek/jni/: DebugParameters.java  JNIDebugCode.java  JNIDebugParameters.java  JNISolverGate.java  OsUtility.java  SolverHandle.java
src/main/java/com/mstruzek/msketch/: Arc.java  ArcOld.java  BoundingBox.java  Circle.java  Config.java  Constraint.java  ConstraintAngle2Lines.java  ConstraintCircleTangency.java  ConstraintConect2Points.java  ConstraintConnect2Points.java  ConstraintConnectHorizontal.java  ConstraintConnectVertical.java  ConstraintDistance2Points.java  ConstraintDistancePointLine.java  ConstraintEqualLength.java  ConstraintFixPoint.java  ConstraintHorizontal.java  ConstraintHorizontalPoint.java  ConstraintInterface.java  ConstraintLinesParallelism.java  ConstraintLinesPerpendicular.java  ConstraintLinesSameLength.java  ConstraintLinesSameLength2.java  ConstraintParametrizedLength.java  ConstraintParametrizedXFix.java  ConstraintParametrizedYFix.java  ConstraintTangency.java  Consts.java  (+33 more)
src/main/native/: CMakeLists.txt  cuSolver___readme.md  kernel.cu  native.sln  native.vcxproj
src/main/native/data/: fidap021.mtx  fidap026.mtx  fidap027.mtx  fidap031.mtx  fidap037.mtx  qh882.mtx
src/main/native/src/: com_mstruzek_jni_JNISolverGate.cpp  com_mstruzek_jni_JNISolverGate.cu  com_mstruzek_jni_JNISolverGate.h  com_mstruzek_jni_JNISolverGate.h_  com_mstruzek_jni_SolverHandle.cpp  com_mstruzek_jni_SolverHandle.h  computation_state.cuh  computation_state_data.h  cuerror.cpp  cuerror.h  entry.cpp  format_encoder.cu  format_encoder.h  from_java_solver.cpp  geometric_solver.cu  geometric_solver.h  gpu_allocator.h  gpu_computation.cpp  gpu_computation.cu  gpu_computation.h  gpu_computation_context.cpp  gpu_computation_context.h  gpu_geometric_solver.cpp  gpu_geometric_solver.h  gpu_linear_system.cpp  gpu_linear_system.h  gpu_solver_system.cpp  gpu_solver_system.h  gpu_utility.cpp  gpu_utility.h  kernel_traits.h  linear_system.cpp  linear_system.h  linear_system_hem.cpp  model.cpp  model.cu  model.cuh  model.h  model_config.cpp  model_config.h  (+20 more)
src/main/native/src/mmio/: mmio_wrapper.cpp
src/main/native/src/solver/: gpu_solver_dense_lu.cpp  gpu_solver_dense_lu.h  gpu_solver_sparse_bicgstab.cpp  gpu_solver_sparse_bicgstab.h  gpu_solver_sparse_ilu02.cpp  gpu_solver_sparse_ilu02.h  gpu_solver_sparse_qr.cpp  gpu_solver_sparse_qr.h  gpu_sparse_precondition_ilu02.cpp  gpu_sparse_precondition_ilu02.h  test_gpu_solver_biccgstab.cpp
src/main/resources/__matlab/sketch/: Newton.m  dsily.m  dwiezy.m
src/main/resources/matlab/: Newton.asv  dane.m  wiezy.asv  wiezy.m
src/pl/struzek/controller/: Controller.java  ControllerInterface.java
src/pl/struzek/graphic/: LineTest.java  Marker.java  MyArc.java  MyCircle.java  MyDrawElement.java  MyFreePoint.java  MyLine.java  MyPoint.java  MyPointContainer.java  MyPopup.java  MySketch.java  MySketchState.java  MyTables.java  TView.java  TableModelRemovable.java  _ConstraintTableModel.java  _ParametersTableModel.java  _PrimitivesTableModel.java
src/pl/struzek/msketch/: Arc.java  ArcOld.java  Circle.java  Config.java  Constraint.java  ConstraintAngle2Lines.java  ConstraintConect2Points.java  ConstraintDistance2Points.java  ConstraintFixPoint.java  ConstraintHorizontal.java  ConstraintInterface.java  ConstraintLinesParallelism.java  ConstraintLinesPerpendicular.java  ConstraintLinesSameLength.java  ConstraintLinesSameLength2.java  ConstraintTangency.java  ConstraintVertical.java  FixLine.java  FreePoint.java  GeometricConstraintType.java  GeometricPrymitive.java  GeometricPrymitiveType.java  Line.java  Model.java  Parameter.java  ParseToColt.java  Point.java  Rysunek.java  Sketch2D.java  Test1.java  Vector.java  _TempSolver.java
src/pl/struzek/msketch/matrix/: BindMatrix.java  MatrixDouble.java
src/pl/struzek/sparsematrixsolver/: BasicVector.java  CGMSolver.java  DenseMatrix.java  Index.java  MatrixAnchor.java  MatrixData.java  MixedMatrix.java  SparseMatrix.java
(+41 files in other folders)
